@@ -1,10 +1,11 @@
 package com.linkedin.datahub.graphql.authorization;
 
-import static com.datahub.authorization.AuthUtil.VIEW_RESTRICTED_ENTITY_TYPES;
-import static com.datahub.authorization.AuthUtil.canViewEntity;
+import static com.datahub.authorization.AuthUtil.isViewRestrictedEntityType;
 import static com.linkedin.metadata.Constants.*;
+import static com.linkedin.metadata.authorization.ApiOperation.CREATE;
 import static com.linkedin.metadata.authorization.ApiOperation.DELETE;
 import static com.linkedin.metadata.authorization.ApiOperation.MANAGE;
+import static com.linkedin.metadata.authorization.ApiOperation.UPDATE;
 import static com.linkedin.metadata.authorization.PoliciesConfig.MANAGE_ACCESS_TOKENS;
 
 import com.datahub.authorization.AuthUtil;
@@ -12,11 +13,15 @@ import com.datahub.authorization.ConjunctivePrivilegeGroup;
 import com.datahub.authorization.DisjunctivePrivilegeGroup;
 import com.datahub.authorization.EntitySpec;
 import com.google.common.collect.ImmutableList;
+import com.linkedin.common.SubTypes;
 import com.linkedin.common.urn.Urn;
 import com.linkedin.common.urn.UrnUtils;
 import com.linkedin.datahub.graphql.QueryContext;
 import com.linkedin.datahub.graphql.generated.PatchEntityInput;
+import com.linkedin.knowledge.DocumentInfo;
+import com.linkedin.metadata.authorization.EntityAuthorizationUtils;
 import com.linkedin.metadata.authorization.PoliciesConfig;
+import com.linkedin.metadata.service.DocumentAuthorizationUtils;
 import io.datahubproject.metadata.context.OperationContext;
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
@@ -26,6 +31,7 @@ import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 import javax.annotation.Nonnull;
+import javax.annotation.Nullable;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.reflect.ConstructorUtils;
 import org.apache.commons.lang3.reflect.FieldUtils;
@@ -239,35 +245,52 @@ public class AuthorizationUtils {
   }
 
   /**
-   * Entry point for the Search Access Controls feature on the GraphQL mapper layer. Returns {@code
-   * true} (i.e., skips the check) when any of the following short-circuits apply:
+   * View Authorization gate for GraphQL mapper redaction and search-result visibility.
    *
-   * <p>- {@code viewAuthorizationConfiguration.enabled} is {@code false} (feature off globally)
+   * <p>Activation is controlled only by View Authorization ({@code
+   * viewAuthorizationConfiguration.enabled}) plus the restricted-type set. When the gate is
+   * inactive this returns {@code true} without consulting privileges. Privilege evaluation uses the
+   * shared {@link EntityAuthorizationUtils#canViewEntity} evaluator (bridge-aware for documents).
    *
-   * <p>- The caller is system authentication
+   * <p>This is intentionally separate from REST API authorization ({@code
+   * authorization.restApiAuthorization}) and from explicit GraphQL document operations such as
+   * {@link #canGetDocument}, which always evaluate privileges.
    *
-   * <p>- The URN's entity type is not in {@link
-   * com.datahub.authorization.AuthUtil#VIEW_RESTRICTED_ENTITY_TYPES}
-   *
-   * <p><b>Silent no-op warning for unlisted entity types.</b> If {@code urn.getEntityType()} is not
-   * in {@code VIEW_RESTRICTED_ENTITY_TYPES}, this method returns {@code true} with no logging and
-   * no error. Any caller relying on it to gate access for such a type is silently permissive. If
-   * you are writing a resolver for an entity type that is not on the allowlist, use the
-   * type-specific helper instead. Known cases:
-   *
-   * <p>- {@code document} — use {@link #canGetDocument(Urn, QueryContext)} (routes through {@code
-   * isAuthorized} with {@code VIEW_ENTITY_PAGE_PRIVILEGE} or {@code MANAGE_DOCUMENTS_PRIVILEGE})
-   *
-   * @see com.datahub.authorization.AuthUtil#VIEW_RESTRICTED_ENTITY_TYPES
+   * @see com.datahub.authorization.AuthUtil#isViewRestrictedEntityType
    * @see <a href="https://docs.datahub.com/docs/features/feature-guides/search-access-controls">
    *     Search Access Controls</a>
    */
   public static boolean canView(@Nonnull OperationContext opContext, @Nonnull Urn urn) {
     if (opContext.getOperationContextConfig().getViewAuthorizationConfiguration().isEnabled()
         && !opContext.isSystemAuth()
-        && VIEW_RESTRICTED_ENTITY_TYPES.contains(urn.getEntityType())) {
+        && isViewRestrictedEntityType(
+            opContext.getOperationContextConfig().getViewAuthorizationConfiguration(),
+            urn.getEntityType())) {
+      return EntityAuthorizationUtils.canViewEntity(opContext, urn);
+    }
+    return true;
+  }
 
-      return canViewEntity(opContext, urn);
+  /**
+   * View Authorization gate for documents when {@code documentInfo}/{@code subTypes} are already
+   * loaded (e.g. GraphQL DocumentMapper). Same activation short-circuits as {@link #canView}, then
+   * evaluates bridge-aware VIEW without re-fetching aspects.
+   *
+   * <p>For privilege checks that must run regardless of View Authorization (timeline, change
+   * history, mutations), use {@link #canGetDocument} instead.
+   */
+  public static boolean canViewDocument(
+      @Nonnull OperationContext opContext,
+      @Nonnull Urn documentUrn,
+      @Nullable DocumentInfo documentInfo,
+      @Nullable SubTypes subTypes) {
+    if (opContext.getOperationContextConfig().getViewAuthorizationConfiguration().isEnabled()
+        && !opContext.isSystemAuth()
+        && isViewRestrictedEntityType(
+            opContext.getOperationContextConfig().getViewAuthorizationConfiguration(),
+            documentUrn.getEntityType())) {
+      return DocumentAuthorizationUtils.canViewDocumentEntity(
+          opContext, opContext.getAspectRetriever(), documentUrn, documentInfo, subTypes);
     }
     return true;
   }
@@ -291,7 +314,7 @@ public class AuthorizationUtils {
                         || field.getType().isPrimitive()) {
                       try {
                         switch (field.getName()) {
-                            // pass through to the restricted entity
+                          // pass through to the restricted entity
                           case "name":
                           case "type":
                           case "urn":
@@ -314,7 +337,7 @@ public class AuthorizationUtils {
                                         "get" + StringUtils.capitalise(field.getName()));
                                 return Boolean.TRUE.equals(
                                     boolGetter.invoke(entity, (Object[]) null));
-                                // mask these fields in the restricted entity
+                              // mask these fields in the restricted entity
                               case "char":
                               case "String":
                                 return "";
@@ -409,77 +432,44 @@ public class AuthorizationUtils {
   }
 
   /**
-   * Returns true if the current user is able to create Knowledge Articles. This is true if the user
-   * has the 'Create Entity' privilege for Knowledge Articles or 'Manage Knowledge Articles'
-   * platform privilege.
+   * Returns true if the current user can create Documents. This is true with the standard ENTITY
+   * create privileges ({@code CREATE_ENTITY} or {@code EDIT_ENTITY}) for documents, or the platform
+   * {@code MANAGE_DOCUMENTS} privilege.
    */
   public static boolean canCreateDocument(@Nonnull QueryContext context) {
-    final DisjunctivePrivilegeGroup orPrivilegeGroups =
-        new DisjunctivePrivilegeGroup(
-            ImmutableList.of(
-                new ConjunctivePrivilegeGroup(
-                    ImmutableList.of(PoliciesConfig.MANAGE_DOCUMENTS_PRIVILEGE.getType()))));
-
-    return AuthUtil.isAuthorized(context.getOperationContext(), orPrivilegeGroups, null);
+    return AuthUtil.isAuthorizedEntityType(
+        context.getOperationContext(), CREATE, List.of(DOCUMENT_ENTITY_NAME));
   }
 
   /**
-   * Returns true if the current user is able to edit a specific Document. This is true if the user
-   * has the 'Edit Entity Docs' or 'Edit Entity' metadata privilege on the document, or the 'Manage
-   * Documents' platform privilege.
+   * Returns true if the current user is able to edit a specific Document. Uses the shared document
+   * privilege map ({@code EDIT_ENTITY} or {@code MANAGE_DOCUMENTS}).
    */
   public static boolean canEditDocument(@Nonnull Urn documentUrn, @Nonnull QueryContext context) {
-    final DisjunctivePrivilegeGroup orPrivilegeGroups =
-        new DisjunctivePrivilegeGroup(
-            ImmutableList.of(
-                new ConjunctivePrivilegeGroup(
-                    ImmutableList.of(PoliciesConfig.EDIT_ENTITY_PRIVILEGE.getType())),
-                new ConjunctivePrivilegeGroup(
-                    ImmutableList.of(PoliciesConfig.MANAGE_DOCUMENTS_PRIVILEGE.getType()))));
-
-    return isAuthorized(
-        context, documentUrn.getEntityType(), documentUrn.toString(), orPrivilegeGroups);
+    return DocumentAuthorizationUtils.isAuthorizedDocumentOperation(
+        context.getOperationContext(), UPDATE, documentUrn);
   }
 
   /**
-   * Returns true if the current user is able to read a specific Document. This is true if the user
-   * has the 'Get Entity' metadata privilege on the document or the 'Manage Documents' platform
-   * privilege.
+   * Explicit GraphQL document/entity READ privilege check. Always evaluates the shared document
+   * VIEW evaluator (ENTITY READ / platform MANAGE_DOCUMENTS, with bridge source inheritance) and is
+   * not gated by View Authorization. Non-document URNs fall through to standard ENTITY READ.
+   *
+   * <p>Use this for direct operations such as timeline and change history. Mapper redaction should
+   * use {@link #canView} / {@link #canViewDocument} instead.
    */
   public static boolean canGetDocument(@Nonnull Urn documentUrn, @Nonnull QueryContext context) {
-    final DisjunctivePrivilegeGroup orPrivilegeGroups =
-        new DisjunctivePrivilegeGroup(
-            ImmutableList.of(
-                new ConjunctivePrivilegeGroup(
-                    ImmutableList.of(PoliciesConfig.VIEW_ENTITY_PAGE_PRIVILEGE.getType())),
-                new ConjunctivePrivilegeGroup(
-                    ImmutableList.of(PoliciesConfig.MANAGE_DOCUMENTS_PRIVILEGE.getType()))));
-
-    return isAuthorized(
-        context, documentUrn.getEntityType(), documentUrn.toString(), orPrivilegeGroups);
+    return DocumentAuthorizationUtils.canViewDocumentEntity(
+        context.getOperationContext(), documentUrn);
   }
 
   /**
-   * Returns true if the current user is able to delete a specific Document. This is true if the
-   * user has the delete entity authorization on the document or the 'Manage Documents' platform
-   * privilege.
+   * Returns true if the current user is able to delete a specific Document. Uses the shared
+   * document privilege map ({@code DELETE_ENTITY} or {@code MANAGE_DOCUMENTS}).
    */
   public static boolean canDeleteDocument(@Nonnull Urn documentUrn, @Nonnull QueryContext context) {
-    // Check if user can delete entity using standard delete authorization
-    if (AuthUtil.isAuthorizedEntityUrns(
-        context.getOperationContext(), DELETE, List.of(documentUrn))) {
-      return true;
-    }
-
-    // Fallback to document-specific management privilege
-    final DisjunctivePrivilegeGroup orPrivilegeGroups =
-        new DisjunctivePrivilegeGroup(
-            ImmutableList.of(
-                new ConjunctivePrivilegeGroup(
-                    ImmutableList.of(PoliciesConfig.MANAGE_DOCUMENTS_PRIVILEGE.getType()))));
-
-    return isAuthorized(
-        context, documentUrn.getEntityType(), documentUrn.toString(), orPrivilegeGroups);
+    return DocumentAuthorizationUtils.isAuthorizedDocumentOperation(
+        context.getOperationContext(), DELETE, documentUrn);
   }
 
   /** Returns true if the current user has the platform-level 'Manage Documents' privilege. */
